--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.3.3",
+    "@mantine/core": "^7.12.1",
+    "@mantine/hooks": "^7.12.1",
     "@remix-run/express": "^2.11.2",
     "@remix-run/node": "^2.11.2",
     "@remix-run/react": "^2.11.2",
